[package]
name = "erst"
version = "0.2.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Embedded Rust"
[dependencies]

erst-derive = { path = "erst-derive", version = "0.2.0" }
erst-shared = { path = "erst-shared", version = "0.2.0" }