[package]
name = "erst"
version = "0.2.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Embedded Rust"

[features]
default = []
dynamic = ["erst-derive/dynamic", "erst-shared/dynamic", "lazy_static"]

[dependencies]

erst-derive = { path = "erst-derive", version = "0.2.1" }
erst-shared = { path = "erst-shared", version = "0.2.1" }
lazy_static = { version = "1.3.0", optional = true }
