[package]
name = "erst-derive"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.34", features = ["full"] }
quote = "0.6.12"
erst-shared = { path = "../erst-shared", version = "0.1.0" }
proc-macro2 = "0.4.30"
