[package]
name = "erst-prepare"
version = "0.2.3"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
description = "Embedded Rust"
repository = "https://github.com/kardeiz/erst"

[features]
default = ["erst-shared/dynamic"]

[dependencies]
erst-shared = { path = "../erst-shared", version = "0.2" }
toml = "0.5.1"
