[package]
name = "erst-shared"
version = "0.3.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
description = "Embedded Rust"
repository = "https://github.com/kardeiz/erst"

[features]
default = []
dynamic = ["xdg", "syn", "quote"]

[dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
syn = { version = "0.15.34", features = ["full"], optional = true }
quote = { version = "0.6.12", optional = true }
xdg = { version = "2.2.0", optional = true }
bstr = "0.1"
derive_more = "0.15"
